--- a/index.html
+++ b/index.html
@@ -1100,7 +1100,7 @@
                     color: '#A0A0A0',
                   }}
                 >
-                  กรุณาคลิกปุ่มด้านล่างเพื่อตอบรับและส่งคำอวยพรถึงบ่าวสาว
+                  คลิกปุ่มด้านล่างเพื่อตอบรับและส่งคำอวยพรถึงบ่าวสาว
                 </p>
                 <a
                   href="https://forms.gle/R3ShL4ZGf1AoSoQj7"
