--- a/index.html
+++ b/index.html
@@ -1093,7 +1093,7 @@
                   <hr className="w-24 border-gray-400" />
                 </div>
                 <p
-                  className="text-sm md:text-base font-light mb-6 fade-in-text rsvp-text" // เพิ่ม class "rsvp-text"
+                  className="text-xs md:text-base font-light mb-2 fade-in-text rsvp-text" // เพิ่ม class "rsvp-text"
                   style={{
                     fontFamily: "'Noto Serif Thai', serif",
                     fontWeight: 300,
