--- a/index.html
+++ b/index.html
@@ -1456,15 +1456,19 @@
                 ></div>
               </div>
               <div className="w-full md:w-1/2 flex flex-col items-center justify-center p-8 text-center">
-                <h1
-                  className="text-6xl md:text-8xl font-bold mb-4 fade-in-text"
+                <p
+                  className="text-3xs md:text-base font-light mb-2 fade-in-text p-3 rsvp-text" // เพิ่ม class "rsvp-text"
                   style={{
-                    fontFamily: "'Dancing Script', cursive",
-                    color: '#8B5A2B',
+                    fontFamily: "'Noto Serif Thai', serif",
+                    fontWeight: 300,
+                    color: '#A0A0A0',
                   }}
                 >
-                  Nat & Bat
-                </h1>
+                  ...❤️... ขอขอบคุณจากใจ ที่ให้เกียรติมาร่วมแสดงความยินดีในวันเริ่มต้นชีวิตคู่ของเรา  
+       หากท่านไม่สะดวกมาร่วมงานด้วยตนเอง แต่ประสงค์จะส่งมอบความปรารถนาดี ท่านสามารถส่งความรักและกำลังใจผ่านการโอนเงินได้ พวกเราซาบซึ้งในทุกความเมตตาและขอขอบพระคุณเป็นอย่างสูง ...❤️...
+                </p>
+                <img src="/imgs/qrcode.jpg" alt="คำอธิบายรูป" />
+
                 
               </div>
             </div>
