--- a/index.html
+++ b/index.html
@@ -1198,7 +1198,7 @@
                 Wedding Schedule
               </h2>
               <p
-                className="text-base md:text-lg mb-8 fade-in-text"
+                className="text-base md:text-lg mb-8 fade-in-text text-center"
                 style={{
                   fontFamily: "'Noto Serif Thai', serif",
                   fontWeight: 300,
@@ -1455,9 +1455,9 @@
                   }}
                 ></div>
               </div>
-              <div className="w-full md:w-1/2 flex flex-col items-center justify-center p-8 text-center">
+              <div className="w-full md:w-1/2 flex flex-col items-center justify-center p-2 text-center">
                 <p
-                  className="text-3xs md:text-base font-light mb-2 fade-in-text p-3 rsvp-text" // เพิ่ม class "rsvp-text"
+                  className="text-3xs md:text-base font-light mb-2 fade-in-text rsvp-text" // เพิ่ม class "rsvp-text"
                   style={{
                     fontFamily: "'Noto Serif Thai', serif",
                     fontWeight: 300,
@@ -1465,7 +1465,7 @@
                   }}
                 >
                   ...❤️... ขอขอบคุณจากใจ ที่ให้เกียรติมาร่วมแสดงความยินดีในวันเริ่มต้นชีวิตคู่ของเรา  
-       หากท่านไม่สะดวกมาร่วมงานด้วยตนเอง แต่ประสงค์จะส่งมอบความปรารถนาดี ท่านสามารถส่งความรักและกำลังใจผ่านการโอนเงินได้ พวกเราซาบซึ้งในทุกความเมตตาและขอขอบพระคุณเป็นอย่างสูง ...❤️...
+       หากท่านไม่สะดวกมาร่วมงานด้วยตนเอง แต่ประสงค์จะส่งมอบความปรารถนาดี ท่านสามารถส่งความรักและกำลังใจผ่านการโอนเงิน พวกเราซาบซึ้งในทุกความเมตตาและขอขอบพระคุณเป็นอย่างสูง ...❤️...
                 </p>
                 <img src="/imgs/qrcode.jpg" alt="คำอธิบายรูป" />
 
