--- a/index.html
+++ b/index.html
@@ -1073,8 +1073,8 @@
             <div className="section w-full flex flex-col md:flex-row items-center justify-center relative">
               <div id="stars-js"></div>
               <div
-                className="w-full h-[60vh] sm:h-[80vh] md:h-screen bg-cover bg-center md:rounded-lg parallax"
-                style={{ backgroundImage: `url('imgs/title.png')` }}
+                className="w-full h-[90vh] sm:h-[80vh] md:h-screen bg-cover bg-center md:rounded-lg parallax"
+                style={{ backgroundImage: `url('/imgs/title02.jpg')` }}
               ></div>
               <div className="w-full md:w-1/2 flex flex-col items-center justify-center p-8 text-center">
                 <h1
