--- a/index.html
+++ b/index.html
@@ -1073,7 +1073,7 @@
             <div className="section w-full flex flex-col md:flex-row items-center justify-center relative">
               <div id="stars-js"></div>
               <div
-                className="w-full h-[65vh] sm:h-[80vh] md:h-screen bg-cover bg-center md:rounded-lg parallax"
+                className="w-full h-[60vh] sm:h-[80vh] md:h-screen bg-cover bg-center md:rounded-lg parallax"
                 style={{ backgroundImage: `url('/imgs/title02.jpg')` }}
               ></div>
               <div className="w-full md:w-1/2 flex flex-col items-center justify-center p-8 text-center">
@@ -1106,11 +1106,11 @@
                   href="https://forms.gle/R3ShL4ZGf1AoSoQj7"
                   target="_blank"
                   rel="noopener noreferrer"
-                  className={`flex items-center px-6 py-3 bg-[#F4B6C2] text-gray-800 rounded-lg shadow-md button-effect heart-effect ${heartClicked ? 'clicked' : ''}`}
+                  className={`flex items-center px-6 py-3 bg-[#563c36] text-gray-800 rounded-lg shadow-md button-effect heart-effect ${heartClicked ? 'clicked' : ''}`}
                   style={{
                     fontFamily: "'Noto Serif Thai', serif",
                     fontWeight: 400,
-                    color: '#4A4A4A',
+                    color: '#FFFFFF',
                   }}
                   onClick={handleRsvpClick}
                 >
@@ -1419,11 +1419,11 @@
                   href="https://www.google.com/maps/dir/?api=1&destination=7.5188034309114995,100.16880534483941"
                   target="_blank"
                   rel="noopener noreferrer"
-                  className="flex items-center px-6 py-3 bg-[#F4B6C2] text-gray-800 rounded-lg shadow-md button-effect"
+                  className="flex items-center px-6 py-3 bg-[#563c36] text-gray-800 rounded-lg shadow-md button-effect"
                   style={{
                     fontFamily: "'Noto Serif Thai', serif",
                     fontWeight: 400,
-                    color: '#4A4A4A',
+                    color: '#FFFFFF',
                   }}
                 >
                   <svg className="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
