--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta property="og:title" content="Nat & Bat Wedding" />
   <meta property="og:description"
     content="ขอเรียนเชิญท่านร่วมเป็นเกียรติในพิธีมงคลสมรสของ Nat & Bat วันที่ 26 กรกฎาคม 2568" />
-  <meta property="og:image" content="https://wedding-n-b.vercel.app/imgs/title.jpg" />
+  <meta property="og:image" content="https://wedding-n-b.vercel.app/imgs/title02.jpg" />
   <meta property="og:url" content="https://wedding-n-b.vercel.app/" />
   <meta property="og:type" content="website" />
   <script src="https://cdn.jsdelivr.net/npm/react@18.3.1/umd/react.development.js" crossorigin></script>
