--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Open Graph Meta Tags สำหรับ Facebook -->
   <meta property="og:title" content="Nat & Bat Wedding" />
   <meta property="og:description"
-    content="ขอเรียนเชิญท่านร่วมเป็นเกียรติในพิธีมงคลสมรสของ Nat & Bat วันที่ 26 กรกฎาคม 2568" />
+    content="ขอเรียนเชิญท่านร่วมเป็นเกียรติในพิธีมงคลสมรสของ ณัฐ & แบท วันที่ 26 กรกฎาคม 2568" />
   <meta property="og:image:url" content="https://wedding-n-b.vercel.app/imgs/title02.jpg" />
   <meta property="og:url" content="https://wedding-n-b.vercel.app/" />
   <meta property="og:type" content="website" />
