--- a/index.html
+++ b/index.html
@@ -768,7 +768,7 @@
         <div className="w-full flex flex-col items-center justify-center p-8 text-center">
           <div className="flex flex-col items-center justify-center mb-12">
             <img
-              src="imgs/logo.png"
+              src="imgs/logo.PNG"
               alt="NB Logo"
               className="w-28 h-28 mb-6"
             />
