--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NAT & BAT</title>
+  <link rel="icon" type="image/png" href="imgs/logo.PNG" />
   <!-- Open Graph Meta Tags สำหรับ Facebook -->
   <meta property="og:title" content="Nat & Bat Wedding" />
   <meta property="og:description"
