--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NAT & BAT</title>
-  <link rel="icon" type="image/png" href="imgs/logo.PNG" />
+  <link rel="icon" type="image/png" href="imgs/logo.png" />
   <!-- Open Graph Meta Tags สำหรับ Facebook -->
   <meta property="og:title" content="Nat & Bat Wedding" />
   <meta property="og:description"
@@ -769,7 +769,7 @@
         <div className="w-full flex flex-col items-center justify-center p-8 text-center">
           <div className="flex flex-col items-center justify-center mb-12">
             <img
-              src="imgs/logo.PNG"
+              src="imgs/logo.png"
               alt="NB Logo"
               className="w-28 h-28 mb-6"
             />
